styles.css
:root {
  --basecolor: hsl(0, 0%, 100%);
  --accentcolor: hsl(288, 100%, 85%);
  --opaquebackground: hsla(0, 0%, 100%, 0.8);
  --logo: hsl(175, 71%, 41%);
  --shadow: hsla(0, 0%, 0%, 0.5);
}

/* 
font-family: 'Work Sans', sans-serif;
font-family: 'Quicksand', sans-serif;
font-family: 'PT Sans Narrow', sans-serif; */

* {
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-family: 'PT Sans Narrow', sans-serif;
  height: 100vh;
  width: 100vw;
  max-width: 2000px;
  margin: 0 auto;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header__title {
  font-family: 'PT Sans', sans-serif;
  text-transform: uppercase;
  margin: 1rem 1rem 1rem 2rem;
  color: var(--logo);
}

.header__text {
  margin: 1rem 1rem 1rem 2rem;
  text-align: right;
}

.main {
  flex-grow: 2;
  height: 60vh;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  margin: 1rem;
}

.board {
  flex-grow: 2;
  display: grid;
  grid-template-rows: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  grid-template-areas:
    "one two"
    "three four";
  justify-items: center;
}
.fig {
  display: flex;
  margin: 0;
  width: 100%;
  justify-content: center;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
.board__caption {
  align-self: flex-end;
  margin-bottom: -1.2rem;
  background-color: var(--opaquebackground);
  padding: 0.5rem;
  text-align: center;
}

.board__figure--one {
  grid-area: one;
}

.board__figure--two {
  grid-area: two;
}

.board__figure--three {
  grid-area: three;
}

.board__figure--four {
  grid-area: four;
}

.movie {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0rem;
}

.movie__title {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
  height: 8rem;
  width: 12rem;
  text-align: center;
  line-height: 8rem;
  z-index: -2;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;

}

.movie__title__overlay{
  position: absolute;
  z-index: -1;
  height: 3rem;
  width: 8rem;
}

.movie__title--text{
  font-family: 'PT Sans', sans-serif;
  font-size: 2rem;
  color: hsla(0, 0%, 100%);
}

.movie__button {
  margin-top: 1rem;
  box-shadow: .4rem .3rem .9rem rgba(0, 0, 0, 0.3);
  background-color: var(--accentcolor);
  padding: 1rem 2rem;
  border: 0;
  text-transform: uppercase;
  border-radius: .2rem;
  font-weight: bold;
  font-size: 1rem;
}

.footer{
    font-size: 0.8rem;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin-bottom:1rem;
}

@media only screen and (orientation: landscape) {
  .board {
    grid-template-rows: 1fr;
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas: 
    "one two three four";
  }
  .movie__title {
    height: 10rem;
    width: 15rem;
  }
}
@media only screen and (min-width: 900px) {
  .board__caption {
    padding: 1.5rem;
  }
}

